--- a/theme/web/main.scss
+++ b/theme/web/main.scss
@@ -135,11 +135,17 @@
     /* background-color: #2eb15417; */
     color: #f6f6f6;
     background: #1faea8;
+    border-color: #34d4cd;
 }
 .btn-success.btn-bordered:hover{
     color: #fff;
 border-color: #34d4cd;
 background-color: #adedec;
+}
+.btn-success.btn-bordered:focus{
+    color: #ebefff;
+border-color: #e7e7e9;
+background-color: #1ab9bc;
 }
 .btn-primary.btn-bordered {
     background-color: #1faea8;
@@ -150,6 +156,11 @@ background-color: #adedec;
     border-color: #34d4cd;
     background-color: #adedec;
 }
+.btn-primary.btn-bordered:focus{
+color: #ebefff;
+border-color: #e7e7e9;
+background-color: #1ab9bc;
+}
 .btn-inverse.btn-bordered {
     background-color: #1faea8;
     color: #f1ebeb;
@@ -159,6 +170,16 @@ background-color: #adedec;
     color: #fff;
     border-color: #34d4cd;
     background-color: #adedec;
+}
+.btn-inverse.btn-bordered:focus{
+color: #ebefff;
+border-color: #e7e7e9;
+background-color: #1ab9bc;
+}
+
+.layout-atlas-responsive-topbar .region-topbar {
+    padding: 0 16px;
+    background-color: #46a5a7;
 }
 
 
