--- a/theme/web/main.scss
+++ b/theme/web/main.scss
@@ -71,9 +71,9 @@
     height: 500px;
 }
 .btn-default {
-    color: #f4f4f4;
+   color: #46a5a7;
     border-color: #74abacc2;
-    background-color: #46a5a7;
+    background-color: #ffffff;
     width: 175px;
     height: 80px;
     font-weight: bold;
@@ -83,13 +83,13 @@
 .btn-default:hover{
     color: #f6f6f6;
     border-color: #e7e7e9;
-    background-color: #2bd2c7;
+    background-color: #1e2424;
 
 }
 .btn-default:focus{
     color: #f1f1f1;
     border-color: #e7e7e9;
-    background-color: #6c9596;
+    background-color: #252829;
 }
 
 
@@ -112,6 +112,7 @@
 
 
 
+
 .layout-atlas .region-sidebar {
     background-color: #158e89;
     z-index: 101;
@@ -131,6 +132,7 @@
     border-color: #9fced1;
     background-color: #158e89;
     font-size: 16px;
+  
 }
 }
 .layout-atlas-responsive .region-topbar, .layout-atlas-responsive-default .region-topbar {
@@ -193,15 +195,15 @@ background-color: #1ab9bc;
 }
 .region-topbar .mx-navbar ul.nav > .mx-navbar-item.active a{
     color: #fff;
-    background-color: #b2dfe0;
+    background-color: #2d3132;
 }
 .region-topbar .mx-navbar ul.nav > li.mx-navbar-item > a:focus{
     color: #fff;
-    background-color: #9ecccd;
+    background-color: #2d3132;
 }
 .region-topbar .mx-navbar ul.nav > li.mx-navbar-item > a:hover{
     color: #fff;
-    background-color: #9ecccd;
+    background-color: #2d3132;
 }
 .layout-atlas .region-topbar .navbar-brand img {
     display: inline-block;
@@ -232,7 +234,79 @@ background-color: #1ab9bc;
     border-radius: 4px 4px 0 0;
     padding: 12px 16px;
 }
+.pageheader {
+    width: 93%;
+    margin-bottom: 24px;
+}
+.email-buttons{
+    width: 148px;
+    height: 53px;
+    margin-bottom: 8px;
 
+}
+.btn-lg img {
+   
+    height: 28px;
+}
+.region-topbar .mx-navbar {
+    background-color: #158e89;
+    min-height: auto;
+}
+.button{
+    width: 112px;
+    height: 51px;
+    background-color: #d5eaec;
+    border-radius: 11px;
+}
+.same-height-card{
+.card{
 
+    height: 245px;
 
+}
+.card:hover{
 
+    transition: 0.2s;
+
+    transform: scale(1.03);
+
+}
+}
+.card-border-20 .card{
+border-radius: 20px;
+}
+.row{
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -8px;
+    margin-right: -8px;
+
+}
+.lan-text{
+    text-align: center;
+    margin-top: 7px;
+    font-weight: 700;
+    font-size: 29px;
+}
+.home-bg-img{
+    background-image: url(7028077\ 1.png);
+    width: 1191px;
+    height: 245px;
+    position: relative;
+    margin-left: 20px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 22px;
+}
+.welcome-text{
+    color: #fff;
+    font-size: 30px;
+    font-weight: 400;
+    font-family: "Lato", sans-serif;
+}
+.engage-text{
+    color: white;
+    font-size: 50px;
+    font-weight: 500;
+}
