--- a/theme/web/main.scss
+++ b/theme/web/main.scss
@@ -460,3 +460,9 @@ border-radius: 20px;
     border-radius: 4px 4px 0 0;
     padding: 12px 16px;
 }
+.mx-groupbox > h4.mx-groupbox-header {
+    font-size: 18px;
+    color: #0d0d0d;
+    /* background-color: rgb(192, 208, 208); */
+    background-color: #b8ebea;
+}
