--- a/theme-cache/web/theme.compiled.css
+++ b/theme-cache/web/theme.compiled.css
@@ -27215,4 +27215,30 @@ input[type=checkbox].three-state-checkbox + .control-label {
   border-radius: 14px;
 }
 
+.custom-editpage.con {
+  width: 1086px;
+  height: 281px;
+  position: relative;
+  top: -293.9938px;
+  opacity: 1;
+  z-index: 102;
+  left: 43.0109px;
+}
+
+.mx-window {
+  position: fixed;
+  left: auto;
+  right: auto;
+  padding: 0;
+  width: 600px;
+  margin: 0;
+  opacity: 1;
+  z-index: 102;
+  height: 90vh;
+  top: 20px;
+  left: 138px;
+  width: auto;
+  right: 129px;
+}
+
 /*# sourceMappingURL=theme.compiled.css.map */
