--- a/theme/web/main.scss
+++ b/theme/web/main.scss
@@ -489,3 +489,29 @@ border-radius: 20px;
     border-radius: 14px;
 
 }
+.custom-editpage.con{
+    width: 1086px;
+    height: 281px;
+    position: relative;
+    top: -293.9938px;
+    opacity: 1;
+    z-index: 102;
+    left: 43.0109px;
+
+}
+.mx-window {
+    position: fixed;
+    left: auto;
+    right: auto;
+    padding: 0;
+    width: 600px;
+    margin: 0;
+    opacity: 1;
+    z-index: 102;
+    height: 90vh;
+    top: 20px;
+    left: 138px;
+    width: auto;
+    right: 129px;
+
+}
