--- a/theme-cache/web/theme.compiled.css
+++ b/theme-cache/web/theme.compiled.css
@@ -27215,7 +27215,7 @@ input[type=checkbox].three-state-checkbox + .control-label {
   border-radius: 14px;
 }
 
-.custom-editpage.con {
+.custom-editpage-user .custom-editpage.con {
   width: 1086px;
   height: 281px;
   position: relative;
@@ -27239,6 +27239,50 @@ input[type=checkbox].three-state-checkbox + .control-label {
   left: 138px;
   width: auto;
   right: 129px;
+}
+
+.admin-but {
+  width: 82px;
+  padding-left: 11px;
+  height: 45px;
+  color: white;
+  background-color: #4fd9d0;
+  font-size: large;
+  font-weight: 600;
+}
+
+.admin-but:hover {
+  color: white;
+  background-color: #4fd9d0;
+  border: #1ab9bc;
+}
+
+.admin-but:focus {
+  color: white;
+  background-color: #cefffc;
+  border: #1ab9bc;
+}
+
+.admin-but:active {
+  color: white;
+  background-color: #c1caca;
+  border: #1ab9bc;
+}
+
+.mx-layoutgrid {
+  width: 100%;
+  margin-right: auto;
+  margin-left: auto;
+  padding-right: 8px;
+  padding-left: 0px;
+}
+
+.mx-tabcontainer .mx-tabcontainer-tabs > li.active > a, .mx-tabcontainer .mx-tabcontainer-tabs > li.active > a:hover, .mx-tabcontainer .mx-tabcontainer-tabs > li.active > a:focus {
+  border: 1px solid #ced0d3;
+  border-bottom-color: #fff;
+  background-color: #5ddcd7;
+  color: white;
+  font-weight: 600;
 }
 
 /*# sourceMappingURL=theme.compiled.css.map */
