--- a/theme/web/main.scss
+++ b/theme/web/main.scss
@@ -488,7 +488,7 @@ border-radius: 20px;
     padding: 36px 42px 39px 25px;
     border-radius: 14px;
 
-}
+}.custom-editpage-user{
 .custom-editpage.con{
     width: 1086px;
     height: 281px;
@@ -498,6 +498,7 @@ border-radius: 20px;
     z-index: 102;
     left: 43.0109px;
 
+}
 }
 .mx-window {
     position: fixed;
@@ -514,4 +515,43 @@ border-radius: 20px;
     width: auto;
     right: 129px;
 
+}
+.admin-but{
+    width: 82px;
+    padding-left: 11px;
+    height: 45px;
+    color: white;
+    background-color: #4fd9d0;
+    font-size: large;
+    font-weight: 600;
+}
+.admin-but:hover{
+    color: white;
+    background-color: #4fd9d0;
+    border: #1ab9bc;
+}
+.admin-but:focus{
+    color: white;
+    background-color: #cefffc;
+    border: #1ab9bc;
+}
+.admin-but:active{
+    color: white;
+    background-color: #c1caca;
+    border: #1ab9bc;
+}
+.mx-layoutgrid {
+    width: 100%;
+    margin-right: auto;
+    margin-left: auto;
+    padding-right: 8px;
+    padding-left: 0px;
+}
+.mx-tabcontainer .mx-tabcontainer-tabs > li.active > a, .mx-tabcontainer .mx-tabcontainer-tabs > li.active > a:hover, .mx-tabcontainer .mx-tabcontainer-tabs > li.active > a:focus {
+   
+    border: 1px solid #ced0d3;
+    border-bottom-color: #fff;
+     background-color: #5ddcd7; 
+     color: white; 
+     font-weight: 600; 
 }
