--- a/themesource/atlas_core/web/core/base/_base.scss
+++ b/themesource/atlas_core/web/core/base/_base.scss
@@ -1,3 +1,4 @@
+@import "../../../../../theme/web/custom-variables.scss";
 //
 // DISCLAIMER:
 // Do not change this file because it is core styling.
