--- a/theme-cache/web/theme.compiled.css
+++ b/theme-cache/web/theme.compiled.css
@@ -27052,21 +27052,17 @@ input[type=checkbox].three-state-checkbox + .control-label {
 
 .home-bg-img {
   background-image: url(7028077\ 1.png);
-  width: auto;
-  margin-right: 22px;
-  height: 245px;
-  position: relative;
-  margin-left: 20px;
-  background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  border-radius: 22px;
+  height: 100%;
+  width: 1227;
+  background-position: center;
 }
 
 .welcome-text {
   color: #fff;
-  font-size: 30px;
-  font-weight: 400;
+  font-size: 35px;
+  font-weight: 700;
   font-family: "Lato", sans-serif;
 }
 
@@ -27287,7 +27283,6 @@ input[type=checkbox].three-state-checkbox + .control-label {
 }
 
 .mx-layoutgrid {
-  width: 100%;
   margin-right: auto;
   margin-left: auto;
   padding-right: 8px;
@@ -27300,6 +27295,22 @@ input[type=checkbox].three-state-checkbox + .control-label {
   background-color: #5ddcd7;
   color: white;
   font-weight: 600;
+}
+
+.mx-scrollcontainer .mx-placeholder {
+  width: 100%;
+  height: 100%;
+  background: #ffffff;
+}
+
+.mx-scrollcontainer-fixed > .mx-scrollcontainer-middle > .mx-scrollcontainer-wrapper, .mx-scrollcontainer-fixed > .mx-scrollcontainer-left > .mx-scrollcontainer-wrapper, .mx-scrollcontainer-fixed > .mx-scrollcontainer-center > .mx-scrollcontainer-wrapper, .mx-scrollcontainer-fixed > .mx-scrollcontainer-right > .mx-scrollcontainer-wrapper {
+  overflow: auto;
+  height: 85vh;
+}
+
+.mx-window-content {
+  height: 90vh;
+  overflow: hidden;
 }
 
 /*# sourceMappingURL=theme.compiled.css.map */
