--- a/theme/web/main.scss
+++ b/theme/web/main.scss
@@ -313,20 +313,16 @@ border-radius: 20px;
 }
 .home-bg-img{
     background-image: url(7028077\ 1.png);
-    width: auto;
-    margin-right: 22px;
-    height: 245px;
-    position: relative;
-    margin-left: 20px;
-    background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    border-radius: 22px;
+    height: 100%;
+    width: 1227;
+    background-position: center;
 }
 .welcome-text{
     color: #fff;
-    font-size: 30px;
-    font-weight: 400;
+    font-size: 35px;
+    font-weight: 700;
     font-family: "Lato", sans-serif;
 }
 .engage-text{
@@ -515,7 +511,7 @@ border-radius: 20px;
     opacity: 1;
     z-index: 102;
     left: 43.0109px;
-
+   
 }
 
 
@@ -578,7 +574,7 @@ border-radius: 20px;
     border: #1ab9bc;
 }
 .mx-layoutgrid {
-    width: 100%;
+    
     margin-right: auto;
     margin-left: auto;
     padding-right: 8px;
@@ -591,4 +587,17 @@ border-radius: 20px;
      background-color: #5ddcd7; 
      color: white; 
      font-weight: 600; 
+}
+.mx-scrollcontainer .mx-placeholder {
+    width: 100%;
+    height: 100%;
+    background: #ffffff;
+}
+.mx-scrollcontainer-fixed > .mx-scrollcontainer-middle > .mx-scrollcontainer-wrapper, .mx-scrollcontainer-fixed > .mx-scrollcontainer-left > .mx-scrollcontainer-wrapper, .mx-scrollcontainer-fixed > .mx-scrollcontainer-center > .mx-scrollcontainer-wrapper, .mx-scrollcontainer-fixed > .mx-scrollcontainer-right > .mx-scrollcontainer-wrapper {
+    overflow: auto;
+    height: 85vh;
+}
+.mx-window-content {
+    height: 90vh;
+    overflow: hidden;
 }
