--- a/theme/web/main.scss
+++ b/theme/web/main.scss
@@ -320,12 +320,13 @@ border-radius: 20px;
     font-weight: 700;
     font-size: 29px;
 }
-.home-bg-img{
+.home-bg-img {
     background-image: url(7028077\ 1.png);
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100%;
-    width: 1227;
+    height: 629px;
+    width: auto;
+    margin-top: -24px;
     background-position: center;
 }
 .welcome-text{
@@ -600,11 +601,12 @@ border-radius: 20px;
 .mx-scrollcontainer .mx-placeholder {
     width: 100%;
     height: 100%;
-    background: #ffffff;
+    background: #d2ded7;
 }
 .mx-scrollcontainer-fixed > .mx-scrollcontainer-middle > .mx-scrollcontainer-wrapper, .mx-scrollcontainer-fixed > .mx-scrollcontainer-left > .mx-scrollcontainer-wrapper, .mx-scrollcontainer-fixed > .mx-scrollcontainer-center > .mx-scrollcontainer-wrapper, .mx-scrollcontainer-fixed > .mx-scrollcontainer-right > .mx-scrollcontainer-wrapper {
     overflow: auto;
-    height: 85vh;
+    // height: 85vh;
+    height: auto;
 }
 .mx-window-content {
     height: 90vh;
