--- a/theme/web/custom-styling-CRM.scss
+++ b/theme/web/custom-styling-CRM.scss
@@ -22,6 +22,7 @@ width: 100%;
     height: 200px;
     background-color: #fff;
     transition: 0.6s;
+    margin-bottom: 30px;
 }
 .class-card:hover{
     scale: 1.1;
