--- a/theme/web/custom-styling.scss
+++ b/theme/web/custom-styling.scss
@@ -328,7 +328,7 @@ border-radius: 20px;
     background-position: center;
 }
 .welcome-text{
-    color: #fff;
+    color: #000;
     font-size: 35px;
     font-weight: 700;
     font-family: "Lato", sans-serif;
@@ -395,13 +395,13 @@ border-radius: 20px;
     color: #ffffff;
     text-shadow: none;
 }
- .org-bg-img{
-     background-image: url(bg-img-org.jpg);
-     background-position: center;
-     background-repeat: no-repeat;
-    background-size: cover;
-    height: 527px;
-}
+//  .org-bg-img{
+//      background-image: url(bg-img-org.jpg);
+//      background-position: center;
+//      background-repeat: no-repeat;
+//     background-size: cover;
+//     height: 527px;
+// }
 .cust-list-view{
 .mx-listview > ul > li {
     transition: all 0.3s 0s cubic-bezier(0.4, 0, 0.2, 1);
@@ -610,3 +610,15 @@ border-radius: 20px;
     overflow: hidden;
 }
 
+.mx-navigationtree .navbar-inner > ul > li > a img {
+    width: 20px;
+    height: auto;
+    margin-right: 0.5em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 52px;
+    height: 35px;
+    padding: 8px 16px;
+    border-radius: 4px;
+}
