--- a/theme/web/custom-styling.scss
+++ b/theme/web/custom-styling.scss
@@ -51,6 +51,7 @@
     background-color: rgb(6 179 187);
     margin-top: 6px;
     margin-bottom: 17px;
+    border-radius: 10px;
     
 
 }
@@ -344,14 +345,11 @@ border-radius: 20px;
     margin-left: -3px;
     text-align: center;
 }
+
 .back-but-org{
-    width: 79px;
-    height: 34px;
-    border-radius: 3px;
-    padding-top: 4px;
-    padding-left: 8px;
-    font-size: 16px;
-    font-weight: 600;
+    border-radius: 10px;
+    font-size: 15px;
+    font-weight: 500;
     background-color: #46a5a7;
     color: white;
 }
@@ -371,6 +369,7 @@ border-radius: 20px;
     border-color: #e7e7e9;
     background-color: #a5bcbd;
 }
+
 .mx-groupbox > h4.mx-groupbox-header {
     font-size: 18px;
     color: white;
@@ -621,4 +620,11 @@ border-radius: 20px;
     height: 35px;
     padding: 8px 16px;
     border-radius: 4px;
+}
+.button-org{
+    background: #eae5e5c9;
+    color: #000000;
+    border-radius: 10px;
+    font-size: 15px;
+    font-weight:500;
 }
