--- a/theme-cache/web/theme.compiled.css
+++ b/theme-cache/web/theme.compiled.css
@@ -27142,7 +27142,7 @@ input[type=checkbox].three-state-checkbox + .control-label {
 }
 
 .modal-dialog .modal-content .modal-header {
-  padding: 15px 20px;
+  padding: 9px;
   border-bottom-color: #ced0d3;
   border-radius: 0;
   background-color: #158e89;
@@ -27151,8 +27151,9 @@ input[type=checkbox].three-state-checkbox + .control-label {
 .modal-dialog .modal-content .modal-header h4 {
   margin: 0px;
   color: rgb(255, 255, 255);
-  font-size: 17px;
-  font-weight: 600;
+  font-size: 18px;
+  font-weight: 500;
+  margin-left: 8px;
 }
 
 .modal-dialog .modal-content .modal-header .close {
@@ -27164,7 +27165,7 @@ input[type=checkbox].three-state-checkbox + .control-label {
 
 .modal-dialog .modal-content {
   border: 1px solid #ced0d3;
-  border-radius: 4px;
+  border-radius: 9px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
@@ -27407,6 +27408,13 @@ input[type=checkbox].three-state-checkbox + .control-label {
   margin-left: -1px;
   text-align: center;
   margin-top: 20px;
+}
+
+.mx-grid-controlbar .mx-button, .mx-grid-search-controls .mx-button {
+  color: white;
+  background: #d3b2e0;
+  margin-bottom: 8px;
+  border-radius: 10px;
 }
 
 .custom-admin-bg-img {
