--- a/theme/web/custom-styling.scss
+++ b/theme/web/custom-styling.scss
@@ -389,7 +389,7 @@ border-radius: 20px;
     background-color: rgb(192 208 208);
 }
 .modal-dialog .modal-content .modal-header {
-    padding: 15px 20px;
+    padding: 9px;
     border-bottom-color: #ced0d3;
     border-radius: 0;
     background-color: #158e89;
@@ -398,10 +398,10 @@ border-radius: 20px;
 }
 .modal-dialog .modal-content .modal-header h4 {
     margin: 0px;
-    color: rgb(255 255 255);
-    font-size: 17px;
-    font-weight: 600;
-  
+    color: rgb(255, 255, 255);
+    font-size: 18px;
+    font-weight: 500;
+    margin-left: 8px;
 }
 .modal-dialog .modal-content .modal-header .close {
     margin-top: -3px;
@@ -412,8 +412,9 @@ border-radius: 20px;
 }
 .modal-dialog .modal-content {
     border: 1px solid #ced0d3;
-    border-radius: 4px;
+    border-radius: 9px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  
    
  
 }
@@ -661,4 +662,10 @@ border-radius: 20px;
     margin-left: -1px;
     text-align: center;
     margin-top: 20px;
+}
+.mx-grid-controlbar .mx-button, .mx-grid-search-controls .mx-button {
+    color: white;
+    background: #d3b2e0;
+    margin-bottom: 8px;
+    border-radius: 10px;
 }
