--- a/theme-cache/web/theme.compiled.css
+++ b/theme-cache/web/theme.compiled.css
@@ -27379,7 +27379,7 @@ input[type=checkbox].three-state-checkbox + .control-label {
   margin-top: 26px;
   margin-bottom: 21px;
   border-radius: 10px;
-  padding: 11px 26px 7px 21px;
+  padding: 8px 26px 7px 21px;
 }
 
 .btn-primary:hover {
@@ -27536,9 +27536,17 @@ input[type=checkbox].three-state-checkbox + .control-label {
   background-color: #1ab9bc;
 }
 
+.layout-atlas .region-topbar .topbar-content {
+  display: flex;
+  align-items: center;
+  min-height: 48px;
+  background-color: #158e89;
+}
+
 .layout-atlas-responsive-topbar .region-topbar {
-  padding: 0 16px;
-  background-color: #46a5a7;
+  margin: -11px -23px -8px -7px;
+  padding: 9px 29p;
+  background-color: #158e89;
 }
 
 .region-topbar .mx-navbar ul.nav > .mx-navbar-item.active a {
@@ -27699,8 +27707,13 @@ input[type=checkbox].three-state-checkbox + .control-label {
   border-radius: 10px;
   font-size: 15px;
   font-weight: 500;
-  background-color: #46a5a7;
+  background-color: rgb(70, 165, 167);
   color: white;
+  padding-bottom: 31px;
+  padding-top: 8px;
+  padding-left: 7px;
+  margin: -2px -1px 9px 4px;
+  width: 82px;
 }
 
 .back-but-org:hover {
@@ -27719,12 +27732,6 @@ input[type=checkbox].three-state-checkbox + .control-label {
   color: #f5f5f6;
   border-color: #e7e7e9;
   background-color: #a5bcbd;
-}
-
-.mx-groupbox > h4.mx-groupbox-header {
-  font-size: 18px;
-  color: white;
-  background-color: rgb(192, 208, 208);
 }
 
 .modal-dialog .modal-content .modal-header {
@@ -27838,10 +27845,11 @@ input[type=checkbox].three-state-checkbox + .control-label {
 }
 
 .mx-groupbox > h4.mx-groupbox-header {
-  font-size: 18px;
+  font-size: 15px;
   color: #0d0d0d;
   /* background-color: rgb(192, 208, 208); */
   background-color: #b8ebea;
+  padding: 2px;
 }
 
 /* // .mx-groupbox > .mx-groupbox-header {
