--- a/theme-cache/web/theme.compiled.css
+++ b/theme-cache/web/theme.compiled.css
@@ -27447,11 +27447,6 @@ input[type=checkbox].three-state-checkbox + .control-label {
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 2px 4px 8px rgba(0, 0, 0, 0.28);
 }
 
-/* // .mx-scrollcontainer .mx-placeholder {
-//     width: 100%;
-//     height: 100%;
-//     background: rgba(94, 167, 168, 0.54);
-// } */
 .layout-atlas .region-sidebar {
   background-color: #158e89;
   z-index: 101;
@@ -27480,60 +27475,6 @@ input[type=checkbox].three-state-checkbox + .control-label {
 .layout-atlas .region-sidebar .mx-navigationtree .navbar-inner > ul > li > a {
   padding: 16px;
   background-color: #158e89;
-}
-
-.btn-success.btn-bordered {
-  /* background-color: #2eb15417; */
-  color: #f6f6f6;
-  background: #1faea8;
-  border-color: #34d4cd;
-}
-
-.btn-success.btn-bordered:hover {
-  color: #fff;
-  border-color: #34d4cd;
-  background-color: #adedec;
-}
-
-.btn-success.btn-bordered:focus {
-  color: #ebefff;
-  border-color: #e7e7e9;
-  background-color: #1ab9bc;
-}
-
-.btn-primary.btn-bordered {
-  background-color: #1faea8;
-  color: #f1f1f2;
-}
-
-.btn-primary.btn-bordered:hover {
-  color: #fff;
-  border-color: #34d4cd;
-  background-color: #adedec;
-}
-
-.btn-primary.btn-bordered:focus {
-  color: #ebefff;
-  border-color: #e7e7e9;
-  background-color: #1ab9bc;
-}
-
-.btn-inverse.btn-bordered {
-  background-color: #1faea8;
-  color: #f1ebeb;
-  border-color: #1faea8;
-}
-
-.btn-inverse.btn-bordered:hover {
-  color: #fff;
-  border-color: #34d4cd;
-  background-color: #adedec;
-}
-
-.btn-inverse.btn-bordered:focus {
-  color: #ebefff;
-  border-color: #e7e7e9;
-  background-color: #1ab9bc;
 }
 
 .layout-atlas .region-topbar .topbar-content {
@@ -27675,19 +27616,29 @@ input[type=checkbox].three-state-checkbox + .control-label {
 }
 
 .home-bg-img {
-  background-image: url(7028077\ 1.png);
+  background-image: image url(images-bg.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   height: 100%;
-  width: 1227;
   background-position: center;
 }
 
+.bg-image {
+  background-image: url(image.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 180px;
+  margin: 1px 22px 0px 7px;
+  width: 94%;
+  border-radius: 18px;
+}
+
 .welcome-text {
-  color: #000;
+  color: #fff;
   font-size: 29px;
-  font-weight: 700;
-  font-family: "Lato", sans-serif;
+  font-weight: 500;
+  font-family: serif;
 }
 
 .engage-text {
@@ -27820,17 +27771,6 @@ input[type=checkbox].three-state-checkbox + .control-label {
   background-color: #94d2e6;
 }
 
-/* // .cont-new{
-//     margin: 0;
-//     color: #0a1325;
-//     border-width: 1px 1px 0 1px;
-//     border-style: solid;
-//     border-color: #e7e7e9;
-//     background: #b8ebea;
-//     font-size: 14px;
-//     border-radius: 4px 4px 0 0;
-//     padding: 12px 16px;
-// } */
 .mx-groupbox > h5.mx-groupbox-header, .mx-groupbox > .mx-groupbox-header.widget-eventTime, .mx-groupbox > .mx-groupbox-header.widget-timeline-title {
   font-size: 14px;
   margin: 0;
@@ -27852,17 +27792,6 @@ input[type=checkbox].three-state-checkbox + .control-label {
   padding: 2px;
 }
 
-/* // .mx-groupbox > .mx-groupbox-header {
-//     margin: 0;
-//     color: #0a1325;
-//     border-width: 1px 1px 0 1px;
-//     border-style: solid;
-//     border-color: #e7e7e9;
-//     font-size: 18px;
-//     border-radius: 4px 4px 0 0;
-//     padding: 12px 16px;
-//     background-color: #b8ebea;
-// } */
 .login-box {
   border: 0px solid rgb(66, 170, 171);
   background-color: rgb(255, 255, 255);
@@ -27949,7 +27878,7 @@ input[type=checkbox].three-state-checkbox + .control-label {
 .mx-scrollcontainer .mx-placeholder {
   width: 100%;
   height: 100%;
-  background: #ffffff;
+  background: #fafafa;
 }
 
 .mx-scrollcontainer-fixed > .mx-scrollcontainer-middle > .mx-scrollcontainer-wrapper, .mx-scrollcontainer-fixed > .mx-scrollcontainer-left > .mx-scrollcontainer-wrapper, .mx-scrollcontainer-fixed > .mx-scrollcontainer-center > .mx-scrollcontainer-wrapper, .mx-scrollcontainer-fixed > .mx-scrollcontainer-right > .mx-scrollcontainer-wrapper {
@@ -28009,6 +27938,13 @@ input[type=checkbox].three-state-checkbox + .control-label {
   background: #d3b2e0;
   margin-bottom: 8px;
   border-radius: 10px;
+}
+
+.for-pass.signup-but {
+  margin-right: 10px;
+  border-radius: 10px;
+  background-color: #adafdb;
+  border: none;
 }
 
 .custom-admin-bg-img {
