--- a/theme/web/custom-styling.scss
+++ b/theme/web/custom-styling.scss
@@ -609,6 +609,16 @@ border-radius:10px;
 background-color: #adafdb;
 border:none;
 }
+.swiper-button-next:after, .swiper-button-prev:after {
+    font-family: swiper-icons;
+    font-size: var(--swiper-navigation-size);
+    font-variant: normal;
+    letter-spacing: 0;
+    line-height: 1;
+    text-transform: none!important;
+    display: none;
+    
+}
 
 
 
