--- a/theme-cache/web/theme.compiled.css
+++ b/theme-cache/web/theme.compiled.css
@@ -27933,6 +27933,11 @@ input[type=checkbox].three-state-checkbox + .control-label {
   margin-top: 20px;
 }
 
+.mx-groupbox > h6.mx-groupbox-header {
+  font-size: 12px;
+  padding: 7px;
+}
+
 .mx-grid-controlbar .mx-button, .mx-grid-search-controls .mx-button {
   color: white;
   background: #d3b2e0;
