--- a/theme/web/custom-styling.scss
+++ b/theme/web/custom-styling.scss
@@ -597,6 +597,10 @@ border-radius: 20px;
     text-align: center;
     margin-top: 20px;
 }
+.mx-groupbox > h6.mx-groupbox-header{
+    font-size: 12px;
+    padding: 7px;
+}
 .mx-grid-controlbar .mx-button, .mx-grid-search-controls .mx-button {
     color: white;
     background: #d3b2e0;
