--- a/theme-cache/web/theme.compiled.css
+++ b/theme-cache/web/theme.compiled.css
@@ -27933,6 +27933,11 @@ input[type=checkbox].three-state-checkbox + .control-label {
   margin-top: 20px;
 }
 
+.glyphicon-menu-hamburger:before {
+  content: "\e236";
+  color: white;
+}
+
 .mx-groupbox > h6.mx-groupbox-header {
   font-size: 12px;
   padding: 7px;
