--- a/theme-cache/web/theme.compiled.css
+++ b/theme-cache/web/theme.compiled.css
@@ -27976,6 +27976,13 @@ input[type=checkbox].three-state-checkbox + .control-label {
   border: none;
 }
 
+.img-coursel {
+  width: 536px;
+  opacity: 0;
+  transform: translate3d(-40px, 0px, 0px);
+  transition-duration: 0ms;
+}
+
 .delete-button {
   border-radius: 10px;
   background: rgb(255, 255, 255);
@@ -28016,10 +28023,47 @@ input[type=checkbox].three-state-checkbox + .control-label {
   border-radius: 10px;
 }
 
+.import-btn {
+  border-radius: 10px;
+  background: rgb(255, 255, 255);
+  border: 2px solid #9dc9b7;
+}
+
+.import-btn:active {
+  background: #afdcdd;
+  border: none;
+  color: white;
+}
+
+.import-btn:hover {
+  background: #afdcdd;
+  border: none;
+  color: white;
+}
+
+.duplicate {
+  background: rgb(249, 249, 247);
+  border: 2px solid #37767e;
+  border-radius: 10px;
+}
+
+.duplicate:hover {
+  background: rgb(111, 173, 188);
+  color: white;
+  border: none;
+}
+
+.duplicate:active {
+  background: rgb(111, 173, 188);
+  color: white;
+  border: none;
+}
+
 .button-btn {
   border: 2px solid #7bdad7;
   border-radius: 10px;
   padding: 7px 20px 8px 20px;
+  color: #706c6c;
 }
 
 .button-btn:active {
@@ -28076,7 +28120,7 @@ input[type=checkbox].three-state-checkbox + .control-label {
 .back-btn {
   border: 2px solid grey;
   background: white;
-  color: blue;
+  color: #706c6c;
   border-radius: 10px;
   padding: 7px 20px 8px 20px;
 }
